apps/backstagek8s/base/backstagek8s-deploy.yaml
---
# create deployment for backstagek8s
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: backstagek8s
  namespace: backstagek8s
  labels:
    app: backstagek8s
    version: 0.0.1
    backstage.io/kubernetes-id: backstagek8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstagek8s
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backstagek8s
        version: 0.0.1
        backstage.io/kubernetes-id: backstagek8s
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: backstagek8s
        image: diegoluisi/backstagek8s:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
