apps/backstagek8s/base/backstagek8s-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backstagek8s-svc
  namespace: backstagek8s
  annotations:
    external-dns.alpha.kubernetes.io/hostname: backstagek8s.diegoluisi.eti.br
  labels:
    app: backstagek8s
    version: 0.0.1
    backstage.io/kubernetes-id: backstagek8s
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: backstagek8s
